# how-i-made-your-machine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  book.toml
.github/workflows/: deploy.yml
preprocessors/: mdbook-language-tabs-preprocessor.rs
skills/how-i-made-your-machine/: SKILL.md
skills/how-i-made-your-machine/references/: choosing-linters-and-type-checkers.md  parse-dont-validate.md
src/: SUMMARY.md  llms.txt  style-guide.md
theme/: language-tabs.css  language-tabs.js
