[package]
name = "how-i-made-your-machine-tools"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "mdbook-language-tabs-preprocessor"
path = "preprocessors/mdbook-language-tabs-preprocessor.rs"

[dependencies]
mdbook-preprocessor = "0.5.2"
regex = "1.12.3"
semver = "1.0.27"
serde_json = "1.0.149"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
